objects/Opening__c.object
<CustomObject>
    <fields>
        <fullName>Fields__c</fullName>
        <label>Fields</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qualification__c</fullName>
        <label>qualification</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Opening</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Opening Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Openings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>